# autoresearch

./: .gitignore  AGENTS.md  pyproject.toml  train.py
