[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous pretraining research swarm"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "kernels>=0.11.7",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "torch==2.11.0",
    "triton-rocm==3.6.0; sys_platform == 'linux'",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-rocm72" },
]
triton-rocm = [
    { index = "pytorch-rocm72" },
]
pytorch-triton-rocm = [
    { index = "pytorch-rocm72" },
]

[[tool.uv.index]]
name = "pytorch-rocm72"
url = "https://download.pytorch.org/whl/rocm7.2"
explicit = true
